--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="left">
             <h3>RSD Campus France</h3><br>
             <h2>VOTRE SITE D'ACCOMPAGNEMENT PERSONNALISÉ
-                   POUR LES DEMARCHES DE CAMPUS FRANCE</h2>
+                   POUR LES DEMARCHES DE CAMPUS FRANCE</h2><br><br>
             <p>Bienvenue sur <b>RSD Campus France </b> (<b>R</b>éussir <b>S</b>a <b>D</b>émarche <b>C</b>ampus <b>F</b>rance).<br>
             Si vous envisagez de poursuivre des études en France, ne cherchez pas plus loin, car nous sommes là pour
              vous accompagner à chaque étape. Campus France peut sembler être un dédale complexe d'exigences 
