--- a/index.html
+++ b/index.html
@@ -80,6 +80,31 @@
                     <p></p>
 
             </div>
+                <h3>Nos Différents Frais de Service</h3>
+        <p>Nous proposons trois types de services adaptés à vos besoins :</p>
+    
+        <h4>Service Limité - 100€</h4>
+        <ul>
+            <li>Création de compte</li>
+            <li>Téléversement des documents</li>
+            <li>Remplissage des informations</li>
+            <li>Préparation à l'entretien</li>
+        </ul>
+
+        <h4>Service Avancé - 200€</h4>
+        <ul>
+            <li>Tout ce qui est inclus dans le Service Limité</li>
+            <li>Choix des écoles</li>
+            <li>Aide à la constitution des dossiers de visa</li>
+            <li>Aide pour le logement</li>
+            <li>Support pour trouver un garant</li>
+        </ul>
+
+        <h4>Service VIP - 500€</h4>
+        <ul>
+            <li>Tout ce qui est inclus dans le Service Avancé</li>
+            <li>Accompagnement personnalisé une fois sur le territoire</li>
+        </ul>
             </div>
      </section>
 
