--- a/index.html
+++ b/index.html
@@ -80,6 +80,41 @@
                     <p></p>
 
             </div>
+            </div>        
+     </section>
+
+     <section id="about_us2">
+            <h2 class="title">Nos Différents Frais de Service </h2>
+                 <div class="about2">   
+                <div class="left">
+                    <p>Nous proposons trois types de services adaptés à vos besoins :</p>
+    
+        <h2>Service Limité - 100€</h2>
+        <ul>
+            <li>Création de compte</li>
+            <li>Téléversement des documents</li>
+            <li>Remplissage des informations</li>
+            <li>Préparation à l'entretien</li>
+        </ul>
+
+        <h2>Service Avancé - 200€</h2>
+        <ul>
+            <li>Tout ce qui est inclus dans le Service Limité</li>
+            <li>Choix des écoles</li>
+            <li>Aide à la constitution des dossiers de visa</li>
+            <li>Aide pour le logement</li>
+            <li>Support pour trouver un garant</li>
+        </ul>
+
+        <h2>Service VIP - 500€</h2>
+        <ul>
+            <li>Tout ce qui est inclus dans le Service Avancé</li>
+            <li>Accompagnement personnalisé une fois sur le territoire</li>
+        </ul>
+                </div>
+                <div class="right">
+                    <img src="images/frais.jpg">
+                </div>
             </div>
          <h1>Nos Différents Frais de Service</h1>
         <p>Nous proposons trois types de services adaptés à vos besoins :</p>
