--- a/index.html
+++ b/index.html
@@ -43,105 +43,78 @@
         </div>
     </section>
 
-     <section id="about_us">
-            <h2 class="title">Notre équipe engagée est déterminée à vous offrir une expérience exceptionnelle à un coût 
-                    abordable pour tous </h2>
-                 <div class="about">   
-                <div class="left">
-                    <img src="images/acc3.jpg">
-                </div>
-                <div class="right">
-                    <p>
-                   Notre engagement est de faire de votre expérience d'études en France un moment exceptionnel. Nous comprenons que les démarches
-                    de Campus France peuvent parfois être décourageantes, c'est pourquoi nous nous efforçons de les rendre accessibles à tous, 
-                    en proposant des solutions adaptées à vos besoins.<br><br>
+   <section id="about_us">
+    <h2 class="title">
+        Notre équipe engagée est déterminée à vous offrir une expérience exceptionnelle à un coût abordable pour tous
+    </h2>
+    <div class="about">
+        <div class="left">
+            <img src="images/acc3.jpg" alt="Image de l'équipe">
+        </div>
+        <div class="right">
+            <p>
+                Notre engagement est de faire de votre expérience d'études en France un moment exceptionnel. Nous comprenons que les démarches
+                de Campus France peuvent parfois être décourageantes, c'est pourquoi nous nous efforçons de les rendre accessibles à tous,
+                en proposant des solutions adaptées à vos besoins.<br><br>
 
-
-
-                  <b>Avez-vous des interrogations, des incertitudes sur la meilleure manière de débuter ?</b><br>
-                  <b>Cherchez-vous un partenaire de confiance pour vous guider à travers chaque étape ?</b><br><br>
-
+                <b>Avez-vous des interrogations, des incertitudes sur la meilleure manière de débuter ?</b><br>
+                <b>Cherchez-vous un partenaire de confiance pour vous guider à travers chaque étape ?</b><br><br>
 
                 Imaginez un service d'assistance personnalisée conçu pour résoudre toutes vos interrogations, dissiper vos incertitudes,
-                 et vous conduire de manière fiable vers le début de votre aventure éducative en France. Nous sommes prêts à vous épauler 
-                 dans la création de votre compte, à vous assister pour le téléchargement des documents requis, à vous préparer pour les entretiens,
-                  à vous guider dans l'obtention de votre passeport, et une fois accepté, à vous accompagner tout au long de la démarche du visa.
-                   De plus, si nécessaire, nous facilitons votre installation en France en vous guidant à travers les procédures essentielles dès 
-                   votre arrivée dans le pays.<br><br>
+                et vous conduire de manière fiable vers le début de votre aventure éducative en France. Nous sommes prêts à vous épauler 
+                dans la création de votre compte, à vous assister pour le téléchargement des documents requis, à vous préparer pour les entretiens,
+                à vous guider dans l'obtention de votre passeport, et une fois accepté, à vous accompagner tout au long de la démarche du visa.
+                De plus, si nécessaire, nous facilitons votre installation en France en vous guidant à travers les procédures essentielles dès 
+                votre arrivée dans le pays.<br><br>
 
-                  Que vous recherchiez une assistance ponctuelle pour une étape spécifique, que vous ayez besoin d'un accompagnement partiel ou 
-                  complet pour l'ensemble de la procédure, ou que vous préfériez que nous prenions en charge votre dossier pour l'intégralité du 
-                  processus, depuis la phase initiale de construction de votre projet d'études jusqu'à votre installation en France. 
-                  Notre équipe dévouée s'engage à faire de votre expérience d'études en France une expérience exceptionnelle.<br><br>
+                Que vous recherchiez une assistance ponctuelle pour une étape spécifique, que vous ayez besoin d'un accompagnement partiel ou 
+                complet pour l'ensemble de la procédure, ou que vous préfériez que nous prenions en charge votre dossier pour l'intégralité du 
+                processus, depuis la phase initiale de construction de votre projet d'études jusqu'à votre installation en France. 
+                Notre équipe dévouée s'engage à faire de votre expérience d'études en France une expérience exceptionnelle.<br><br>
 
-                  N'hésitez pas à avancer sans crainte. Faites le premier pas vers un avenir académique prometteur en France en vous appuyant sur
-                   notre expertise éprouvée. Nous sommes à vos côtés à chaque étape du passionnant processus Campus France. Votre aventure 
-                   éducative en France commence ici, avec nous.<br><br><br></p>
-                    <p></p>
+                N'hésitez pas à avancer sans crainte. Faites le premier pas vers un avenir académique prometteur en France en vous appuyant sur
+                notre expertise éprouvée. Nous sommes à vos côtés à chaque étape du passionnant processus Campus France. Votre aventure 
+                éducative en France commence ici, avec nous.
+            </p>
+        </div>
+    </div>
+</section>
 
-            </div>
-            </div>        
-     </section>
+<section id="about_us1">
+    <h2 class="title">Nos Différents Frais de Service</h2>
+    <div class="about1">
+        <div class="left">
+            <p>Nous proposons trois types de services adaptés à vos besoins :</p>
 
-     <section id="about_us1">
-            <h2 class="title">Nos Différents Frais de Service </h2>
-                 <div class="about1">   
-                <div class="left">
-                    <p>Nous proposons trois types de services adaptés à vos besoins :</p>
-    
-        <h2>Service Limité - 100€</h2>
-        <ul>
-            <li>Création de compte</li>
-            <li>Téléversement des documents</li>
-            <li>Remplissage des informations</li>
-            <li>Préparation à l'entretien</li>
-        </ul>
+            <h2>Service Limité - 100€</h2>
+            <ul>
+                <li>Création de compte</li>
+                <li>Téléversement des documents</li>
+                <li>Remplissage des informations</li>
+                <li>Préparation à l'entretien</li>
+            </ul>
 
-        <h2>Service Avancé - 200€</h2>
-        <ul>
-            <li>Tout ce qui est inclus dans le Service Limité</li>
-            <li>Choix des écoles</li>
-            <li>Aide à la constitution des dossiers de visa</li>
-            <li>Aide pour le logement</li>
-            <li>Support pour trouver un garant</li>
-        </ul>
+            <h2>Service Avancé - 200€</h2>
+            <ul>
+                <li>Tout ce qui est inclus dans le Service Limité</li>
+                <li>Choix des écoles</li>
+                <li>Aide à la constitution des dossiers de visa</li>
+                <li>Aide pour le logement</li>
+                <li>Support pour trouver un garant</li>
+            </ul>
 
-        <h2>Service VIP - 500€</h2>
-        <ul>
-            <li>Tout ce qui est inclus dans le Service Avancé</li>
-            <li>Accompagnement personnalisé une fois sur le territoire</li>
-        </ul>
-                </div>
-                <div class="right">
-                    <img src="images/frais.jpg">
-                </div>
-            </div>
-         <h1>Nos Différents Frais de Service</h1>
-        <p>Nous proposons trois types de services adaptés à vos besoins :</p>
-    
-        <h2>Service Limité - 100€</h2>
-        <ul>
-            <li>Création de compte</li>
-            <li>Téléversement des documents</li>
-            <li>Remplissage des informations</li>
-            <li>Préparation à l'entretien</li>
-        </ul>
+            <h2>Service VIP - 500€</h2>
+            <ul>
+                <li>Tout ce qui est inclus dans le Service Avancé</li>
+                <li>Accompagnement personnalisé une fois sur le territoire</li>
+            </ul>
+        </div>
+        <div class="right">
+            <img src="images/frais.jpg" alt="Image des frais">
+        </div>
+    </div>
+</section>
 
-        <h2>Service Avancé - 200€</h2>
-        <ul>
-            <li>Tout ce qui est inclus dans le Service Limité</li>
-            <li>Choix des écoles</li>
-            <li>Aide à la constitution des dossiers de visa</li>
-            <li>Aide pour le logement</li>
-            <li>Support pour trouver un garant</li>
-        </ul>
-
-        <h2>Service VIP - 500€</h2>
-        <ul>
-            <li>Tout ce qui est inclus dans le Service Avancé</li>
-            <li>Accompagnement personnalisé une fois sur le territoire</li>
-        </ul>
-     </section>
        <!-- section  menu -->
 
        <section id="menu">
