--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <h2 class="title">Nos Différents Frais de Service</h2>
     <div class="about1">
         <div class="left">
-            <p>Nous proposons trois types de services adaptés à vos besoins :</p>
+            Nous proposons trois types de services adaptés à vos besoins :
 
             <h2>Service Limité - 100€</h2>
             <ul>
