--- a/index.html
+++ b/index.html
@@ -80,6 +80,25 @@
     </div>
 </section>
 
+
+<section id="homes">
+        <div class="left">
+            <h3>Nos Différents Frais de Service</h3><br>
+            <h2>Nous proposons trois types de services adaptés à vos besoins :</h2><br><br>
+            <p>Service Limité - 100€</p>
+            Création de compte, téléversement des documents, remplissage des informations, préparation à l'entretien.<br>
+
+            <p>Service Avancé - 200€</p>
+            Tout ce qui est inclus dans le Service Limité, choix des écoles, aide à la constitution des dossiers de visa, aide pour le logement, support pour trouver un garant<br>
+
+            <p>Service VIP - 500€</p>
+            Tout ce qui est inclus dans le Service Avancé, accompagnement personnalisé une fois sur le territoire.
+        </div>
+        <div class="right">
+            <img src="images/frais.jpg">
+        </div>
+</section>
+    
 <section id="about_us1">
     <h2 class="title">Nos Différents Frais de Service</h2>
     <div class="about1">
@@ -87,27 +106,13 @@
             Nous proposons trois types de services adaptés à vos besoins :
 
             <h2>Service Limité - 100€</h2>
-            <ul>
-                <li>Création de compte</li>
-                <li>Téléversement des documents</li>
-                <li>Remplissage des informations</li>
-                <li>Préparation à l'entretien</li>
-            </ul>
+            Création de compte, téléversement des documents, remplissage des informations, préparation à l'entretien.<br>
 
             <h2>Service Avancé - 200€</h2>
-            <ul>
-                <li>Tout ce qui est inclus dans le Service Limité</li>
-                <li>Choix des écoles</li>
-                <li>Aide à la constitution des dossiers de visa</li>
-                <li>Aide pour le logement</li>
-                <li>Support pour trouver un garant</li>
-            </ul>
+            Tout ce qui est inclus dans le Service Limité, choix des écoles, aide à la constitution des dossiers de visa, aide pour le logement, support pour trouver un garant<br>
 
             <h2>Service VIP - 500€</h2>
-            <ul>
-                <li>Tout ce qui est inclus dans le Service Avancé</li>
-                <li>Accompagnement personnalisé une fois sur le territoire</li>
-            </ul>
+            Tout ce qui est inclus dans le Service Avancé, accompagnement personnalisé une fois sur le territoire.
         </div>
         <div class="right">
             <img src="images/frais.jpg" alt="Image des frais">
