--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 </section>
 
 
-<section id="homes">
+<section id="home">
         <div class="left">
             <h3>Nos Différents Frais de Service</h3><br>
             <h2>Nous proposons trois types de services adaptés à vos besoins :</h2><br><br>
@@ -97,27 +97,6 @@
         <div class="right">
             <img src="images/frais.jpg">
         </div>
-</section>
-    
-<section id="about_us1">
-    <h2 class="title">Nos Différents Frais de Service</h2>
-    <div class="about1">
-        <div class="left">
-            Nous proposons trois types de services adaptés à vos besoins :
-
-            <h2>Service Limité - 100€</h2>
-            Création de compte, téléversement des documents, remplissage des informations, préparation à l'entretien.<br>
-
-            <h2>Service Avancé - 200€</h2>
-            Tout ce qui est inclus dans le Service Limité, choix des écoles, aide à la constitution des dossiers de visa, aide pour le logement, support pour trouver un garant<br>
-
-            <h2>Service VIP - 500€</h2>
-            Tout ce qui est inclus dans le Service Avancé, accompagnement personnalisé une fois sur le territoire.
-        </div>
-        <div class="right">
-            <img src="images/frais.jpg" alt="Image des frais">
-        </div>
-    </div>
 </section>
 
        <!-- section  menu -->
