--- a/index.html
+++ b/index.html
@@ -84,15 +84,16 @@
 <section id="home">
         <div class="left">
             <h3>Nos Différents Frais de Service</h3><br>
-            <h2>Nous proposons trois types de services adaptés à vos besoins :</h2><br><br>
+            <h2>Nous proposons trois types de services adaptés à vos besoins :</h2><br><br><br><br>
             <p>Service Limité - 100€</p>
-            Création de compte, téléversement des documents, remplissage des informations, préparation à l'entretien.<br>
+            Création de compte, téléversement des documents, remplissage des informations, préparation à l'entretien...<br><br><br>
 
             <p>Service Avancé - 200€</p>
-            Tout ce qui est inclus dans le Service Limité, choix des écoles, aide à la constitution des dossiers de visa, aide pour le logement, support pour trouver un garant<br>
+            Tout ce qui est inclus dans le Service Limité plus choix des écoles, aide pour le logement, solution pour trouver un garant, aide à la constitution des dossiers de visa, 
+            support pour trouver un garant...<br><br><br>
 
             <p>Service VIP - 500€</p>
-            Tout ce qui est inclus dans le Service Avancé, accompagnement personnalisé une fois sur le territoire.
+            Tout ce qui est inclus dans le Service Avancé, accompagnement personnalisé une fois sur le territoire...
         </div>
         <div class="right">
             <img src="images/frais.jpg">
