--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         <div class="left">
             <h3>Nos Différents Frais de Service</h3><br>
             <h2>Nous proposons trois types de services adaptés à vos besoins :</h2><br><br><br><br>
-            <p>Service Limité - 100€</p>
-            Création de compte, téléversement des documents, remplissage des informations, préparation à l'entretien...<br><br><br>
+            Service Limité - 100€
+            <p></p>Création de compte, téléversement des documents, remplissage des informations, préparation à l'entretien...<br><br><br></p>
 
             <p>Service Avancé - 200€</p>
             Tout ce qui est inclus dans le Service Limité plus choix des écoles, aide pour le logement, solution pour trouver un garant, aide à la constitution des dossiers de visa, 
