--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
 <section id="home">
         <div class="left">
             <h3>Nos Différents Frais de Service</h3><br>
-            <h2>Nous proposons trois types de services adaptés à vos besoins :</h2><br><br><br><br>
-            Service Limité - 100€
-            <p></p>Création de compte, téléversement des documents, remplissage des informations, préparation à l'entretien...<br><br><br></p>
+            <h2>Nous proposons trois types de services adaptés à vos besoins :</h2><br><br>
+            <p></p>Service Limité - 100€</p>
+            Création de compte, téléversement des documents, remplissage des informations, préparation à l'entretien...<br><br>
 
             <p>Service Avancé - 200€</p>
             Tout ce qui est inclus dans le Service Limité plus choix des écoles, aide pour le logement, solution pour trouver un garant, aide à la constitution des dossiers de visa, 
-            support pour trouver un garant...<br><br><br>
+            support pour trouver un garant...<br><br>
 
             <p>Service VIP - 500€</p>
             Tout ce qui est inclus dans le Service Avancé, accompagnement personnalisé une fois sur le territoire...
