--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="left">
             <h3>Nos Différents Frais de Service</h3><br>
             <h2>Nous proposons trois types de services adaptés à vos besoins :</h2><br><br>
-            <p></p>Service Limité - 100€</p>
+            <p>Service Limité - 100€</p>
             Création de compte, téléversement des documents, remplissage des informations, préparation à l'entretien...<br><br>
 
             <p>Service Avancé - 200€</p>
