--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
         <div class="left">
             <h3>Nos Différents Frais de Service</h3><br>
             <h2>Nous proposons trois types de services adaptés à vos besoins :</h2><br><br>
-            <p><b>Service Limité - 100€:</b>
+            <p><b>Service Limité - 100€:<br></b>
             Création de compte, téléversement des documents, remplissage des informations, préparation à l'entretien...<br><br>
 
-            <b>Service Avancé - 200€</b>
+            <b>Service Avancé - 200€<br></b>
             Tout ce qui est inclus dans le Service Limité plus choix des écoles, aide pour le logement, solution pour trouver un garant, aide à la constitution des dossiers de visa, 
             support pour trouver un garant...<br><br>
 
-            <b>Service VIP - 500€</b>
+            <b>Service VIP - 500€<br></b>
             Tout ce qui est inclus dans le Service Avancé, accompagnement personnalisé une fois sur le territoire...</p>
         </div>
         <div class="right">
