--- a/index.html
+++ b/index.html
@@ -251,8 +251,7 @@
         ce n'était pas le moment de faire les choses à la légère. Heureusement, j'ai eu la chance de
          tomber sur l'équipe de RSD Campus France. Leur préparation minutieuse m'a permis de faire face 
          à cet entretien avec confiance. Leurs conseils pratiques, leurs réponses aux questions difficiles,
-          et leur soutien continu m'ont été d'une aide à part entière. Si vous traversez la même épreuve, 
-          je vous recommande fortement leur services.</p>
+          et leur soutien continu m'ont été d'une aide à part entière.</p>
         <span>Koffi</span>
         <div class="ratings">
             <span class="star">&#9733;</span>
@@ -316,8 +315,9 @@
         <button class="delete-btn">27/08/2023</button>
     </div>
     <div class="testimonial">
-        <p>J'ai fait appel à RSD Campus France pour m'aider à choisir mes parcours et universités,
-         mais je n'ai pas du tout été satisfaite. Leurs recommandations ne m' plaisait pas vriamanet.
+        <p>J'ai fait appel à RSD Campus France pour aider ma fille à choisir ses parcours et universités,
+         mais je n'ai pas du tout été satisfaite, je ne sais pas pourquoi. Leurs recommandations ne me 
+         plaisait simplement pas vraimant.
          </p>
         <span>Leïla</span>
         <div class="ratings">
@@ -365,9 +365,7 @@
         <p>Je ne peux que recommander les services de RSD Campus France. Leur équipe compétente et 
         dévouée m'a apporté un accompagnement sur mesure du début à la fin. Ils m'ont aidé à valider 
         mon visa, à m'inscrire à l'université et à gérer toutes les démarches administratives 
-        nécessaires. Leur soutien va bien au-delà de l'administratif, car ils m'ont également 
-        guidé dans ma découverte de la France. Je me suis senti bien encadré et prêt à réussir
-        mon expérience étudiante en France.</p>
+        nécessaires. Leur soutien va bien au-delà de l'administratif.</p>
         <span>Adbdel</span>
         <div class="ratings">
             <span class="star">&#9733;</span>
@@ -382,7 +380,7 @@
         <p>La recherche de logement en France peut être complexe, mais avec RSD Campus France, 
         j'ai trouvé un endroit idéal où vivre. Leur équipe m'a aidé à choisir un logement abordable
          et sûr. Allez y les yeux fermés et découvrez comment ils peuvent vous préparer 
-          au succès</p>
+          au succès. Je vous recommande vivement leur service.</p>
         <span>Sephora</span>
         <div class="ratings">
             <span class="star">&#9733;</span>
@@ -399,7 +397,7 @@
     <div class="testimonial">
         <p>Choisir les bons parcours et universités était crucial pour moi, et l'équipe de RSD 
         Campus France m'a fourni des conseils précieux. Leur expertise m'a aidé à prendre des 
-        décisions éclairées et à éviter les pièges courants. Je recommande vivement leur service.</p>
+        décisions éclairées et à éviter les pièges courants.</p>
         <span>Michael</span>
         <div class="ratings">
             <span class="star">&#9733;</span>
